--- a/src/components/Publications.css
+++ b/src/components/Publications.css
@@ -9,7 +9,7 @@
 .Publications .Container {
     margin: 4rem auto;
     width: 90%;
-    padding-bottom: 4rem 0rem;;
+    padding-bottom: 4rem 0rem;
 }
 
 .Publications h2 {
